# sondoc

./: .gitignore  Pipfile  README.md  setup.cfg
c/: autotest
sondoc/: bind.py  command.py  prepare.py  transform.py
tests/: test_mixed.py
