[metadata]
name = sondoc
version = 0.1
description = Create self-contained cross-refernced documents based on markdown
long_description = file: README.md
url = https://github.com/etherealist/sondoc
author = David Sonder
license = GPL-3.0-or-later
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Topic :: Documentation

[options]
include_package_data = true
packages = find:
install_requires =
    click
    pillow
    weasyprint

[options.extras_require]
dev =
    black==20.8b1
    pytest
    pdbpp
    isort
    hypothesis
    flake8
    flake8-bugbear
    flake8-debugger
    flake8-docstrings
    flake8-isort
    flake8-string-format
    flake8-tuple
    python-language-server
    mypy

[options.entry_points]
console_scripts =
  sondoc = sondoc.command:cli


[flake8]
ignore =
    E203,
    E501,
    W503,
    D100,
    D101,
    D102,
    D103,
    D104,
    D105,
    D106,
    D107,
max-line-length = 88
max-complexity = 10
doctests = True

[tool:isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
line_length=88
